--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </style>
 
 <div id='container'></div>
+<img src="./teamRoles/borrar.png" />
 <script type="text/javascript" src="assets/main.bundle.js"></script>
 
 <script>
@@ -18,7 +19,7 @@
       frameJs: '/assets/frame.bundle.js',
       frameCss: '/assets/styles/h5p.css',
    }
-   new H5PStandalone.H5P(el, options);
+   // new H5PStandalone.H5P(el, options);
 </script>
 
 </html>
