--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script>
    const el = document.getElementById('container');
    const options = {
-      h5pJsonPath: '/teamRoles',
+      h5pJsonPath: '/h5p/teamRoles',
       frameJs: '/assets/frame.bundle.js',
       frameCss: '/assets/styles/h5p.css',
    }
